--- a/vhr/vhrserver/vhr-web/src/main/resources/application.yml
+++ b/vhr/vhrserver/vhr-web/src/main/resources/application.yml
@@ -22,4 +22,7 @@ server:
     enabled: true
 fastdfs:
   nginx:
-    host: http://192.168.91.128/
+    host: http://192.168.188.100/
+logging:
+  level:
+    com.vhr: debug
