--- a/vhr/vhrserver/vhr-web/src/main/resources/application.yml
+++ b/vhr/vhrserver/vhr-web/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     username: root
-    password: 1234
-    url: jdbc:mysql://192.168.188.100:3309/vhr?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    password: 123456
+    url: jdbc:mysql://localhost:3306/spzx-cloud-user?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   rabbitmq:
     username: guest
     password: admin
